Fix overflow hamburger-menu

--- a/src/style/partials/reset.scss
+++ b/src/style/partials/reset.scss
@@ -2,7 +2,10 @@
     RESET
 ----------------------*/
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+#app {
+  overflow-x: hidden;
 }
